Fix form overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -103,15 +103,17 @@ td {
 }
 
 Form {
-  opacity: 1;
-  border: 4px solid #FFC43D;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 45%;
-  z-index:99;
+  max-height: 91%; 
   background-color: white;
+  border: 4px solid #FFC43D;
+  z-index:99;
+  position: fixed;
+  left: 50%;
+  top:50%;
+  overflow:auto;
   transform: translate(-50%, -50%);
+  width: 40%;
+  opacity: 1;
 }
 
 .formHeader {
